rm rpm package