@@ -128,7 +128,7 @@ tasks.register("prepMsi") {
 
     dependsOn("copyLibs", "copyJar", "copyJfx")
 
-    finalizedBy("msiPackage", "rpmPackage")
+    finalizedBy("msiPackage")
 }
 
 tasks.register("copyJfx", Copy) {
@@ -192,34 +192,6 @@ tasks.register("msiPackage") {
             "--app-version", "$version",
             "--icon", "$buildDir/libs/main.ico",
             "--win-upgrade-uuid", "5536eb5f-55c0-408d-b034-677536a3a078"
-        }
-    }
-}
-tasks.register("rpmPackage") {
-    mustRunAfter("copyJar")
-
-    group = "potoflux"
-    description = "build as msi installer"
-
-    doLast {
-        exec {
-            commandLine "jpackage",
-            "--input", "$buildDir/libs/build",
-            "--name", "PotoFlux",
-            "--main-jar", "PotoFlux-$version" + ".jar",
-            "--main-class", "net.minheur.potoflux.PotoFlux",
-
-            "--type", "rpm",
-            "--dest", "$buildDir/libs/output",
-
-            "--runtime-image", "${System.getProperty('java.home')}",
-
-            "--java-options", "--module-path=\$APPDIR\\lib --add-modules=javafx.controls,javafx.graphics -Xmx512m",
-
-            "--install-dir", "/opt/TechnoMastery/PotoFlux",
-
-            "--app-version", "$version",
-            "--icon", "$buildDir/libs/main.png"
         }
     }
 }
